--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/ldn0x7dc/react-native-transformable-image#readme",
   "dependencies": {
-    "react-native-view-transformer-next": "latest"
+    "react-native-view-transformer-next": "latest",
+    "prop-types": "latest"
   }
 }
